[gd_scene load_steps=2 format=3 uid="uid://dkjs51eytnism"]

[ext_resource type="Script" uid="uid://iukf7jufv7li" path="res://scripts/main_menu/panels/SystemPanel.gd" id="1"]

[node name="SystemPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Backdrop" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.9)

[node name="Root" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="Root"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Title" type="Label" parent="Root/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "System"
horizontal_alignment = 1

[node name="Center" type="CenterContainer" parent="Root"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Frame" type="Panel" parent="Root/Center"]
unique_name_in_owner = true
custom_minimum_size = Vector2(720, 0)
layout_mode = 2

[node name="Menu" type="VBoxContainer" parent="Root/Center/Frame"]
unique_name_in_owner = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1

[node name="LoadBtn" type="Button" parent="Root/Center/Frame/Menu"]
unique_name_in_owner = true
layout_mode = 2
text = "Load"

[node name="SaveBtn" type="Button" parent="Root/Center/Frame/Menu"]
unique_name_in_owner = true
layout_mode = 2
text = "Save"

[node name="SettingsBtn" type="Button" parent="Root/Center/Frame/Menu"]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="TitleBtn" type="Button" parent="Root/Center/Frame/Menu"]
unique_name_in_owner = true
layout_mode = 2
text = "Return to Title"
